<resources>

    <string name="app_name">Covid 19</string>
    <string name="warning">Stay home, Stay safe.</string>
    <string name="footer">Made by Jugal</string>
    <string name="refresh_button">Refresh</string>
    <string name="country">Country</string>
    <string name="cases">Cases</string>
    <string name="recovered">Recovered</string>
    <string name="deaths">Deaths</string>
    <string name="todayCases">Cases Today</string>
    <string name="todayDeaths">Deaths Today</string>
    <string name="activeCases">Active Cases</string>
    <string name="casesPerMillion">Cases Per Million</string>
    <string name="deathsPerMillion">Deaths Per Million</string>
    <string name="tests">Total Tests</string>
    <string name="criticalCases">Critical Cases</string>
    <string name="testsPerMillion">Tests Per Million</string>
    <string name="search_button">Search</string>
    <string name="network_issue">Internet issue, please try again</string>
    <string name="splash_icon">Splash Icon</string>
    <string name="country_flag">Country Flag</string>
    <string name="indian_states_stats">Indian States Stats</string>
    <string name="state_confirmed_cases">Confirmed Cases</string>
    <string name="state_discharged">Discharged</string>
    <string name="state_deaths">Deaths</string>
    <string name="world_overiew">World Overiew</string>
    <string name="indian_states">Indian States</string>
    <string name="about">About</string>
    <string name="mapsOverview">Maps Overview</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
