<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient"
        tools:context="com.github.crazyuploader.covid19.SplashActivity">

    <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            app:srcCompat="@drawable/ic_virus"
            android:contentDescription="@string/splash_icon"
            android:id="@+id/splashImageView"
            android:layout_centerInParent="true"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="#FFFFFF"
            android:id="@+id/splashTextView"
            android:layout_below="@id/splashImageView"
            tools:layout_editor_absoluteY="491dp"
            tools:layout_editor_absoluteX="168dp"
            android:textSize="28sp"
            android:layout_marginTop="5dp"
            android:textAllCaps="true"
            android:layout_centerHorizontal="true"/>

    <TextView
            android:layout_centerHorizontal="true"
            android:text="@string/warning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textColor="#FF5252"
            android:layout_alignParentEnd="false"
            android:layout_alignParentBottom="true"
            android:gravity="bottom"
            android:layout_marginBottom="15dp"/>
</RelativeLayout>