<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
            android:background="@drawable/roundedbutton"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <LinearLayout
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <TextView
                    android:layout_width="match_parent"
                    android:padding="2dp"
                    android:textStyle="bold"
                    android:textSize="24sp"
                    android:text="@string/country"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:id="@+id/country" android:fontFamily="sans-serif"/>

            <TextView
                    android:layout_width="match_parent"
                    android:padding="2dp"
                    android:textStyle="bold"
                    android:text="@string/cases"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:textSize="24sp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:id="@+id/countryCases" android:fontFamily="sans-serif"/>

            <TextView
                    android:layout_width="match_parent"
                    android:padding="2dp"
                    android:textStyle="bold"
                    android:text="@string/deaths"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:textSize="24sp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:id="@+id/countryDeaths" android:fontFamily="sans-serif"/>

        </LinearLayout>

        <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="8"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <TextView
                    android:layout_width="match_parent"
                    android:padding="2dp"
                    android:textSize="22sp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:id="@+id/countryName" android:fontFamily="sans-serif" android:textStyle="normal"/>
            <TextView
                    android:layout_width="match_parent"
                    android:padding="2dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:textSize="22sp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:id="@+id/countryTotalCases" android:fontFamily="sans-serif" android:textStyle="normal"/>
            <TextView
                    android:layout_width="match_parent"
                    android:padding="2dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:textSize="22sp"
                    android:layout_marginTop="5dp"
                    android:textColor="#F44336"
                    android:layout_marginBottom="5dp"
                    android:id="@+id/countryTotalDeaths" android:fontFamily="sans-serif" android:textStyle="normal"/>
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>